php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #55755 SegFault when outputting header WWW-Authenticate
Submitted: 2011-09-21 13:36 UTC Modified: 2011-09-23 03:25 UTC
From: scott at aubrey dot org dot uk Assigned: laruence (profile)
Status: Closed Package: Built-in web server
PHP Version: 5.4SVN-2011-09-21 (snap) OS: Mac OS X 10.7.1 (Lion)
Private report: No CVE-ID: None
 [2011-09-21 13:36 UTC] scott at aubrey dot org dot uk
Description:
------------
Segmentation fault: 11

output and server quits when using the simple script below.

Test script:
---------------
<?php
header('WWW-Authenticate: Digest;');


Expected result:
----------------
headers sent

Actual result:
--------------
> php -S 127.0.0.1:8000 
PHP 5.4.0beta2-dev Development Server started at Wed Sep 21 14:33:13 2011
Listening on 127.0.0.1:8000
Document root is /Users/scottaubrey
Press Ctrl-C to quit.
[Wed Sep 21 14:33:17 2011] 127.0.0.1:52299 [401]: /testphp.php
Segmentation fault: 11


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2011-09-21 15:58 UTC] laruence@php.net
-Status: Open +Status: Closed -Assigned To: +Assigned To: laruence
 [2011-09-21 15:58 UTC] laruence@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.

 For Windows:

http://windows.php.net/snapshots/
 
Thank you for the report, and for helping us make PHP better.

This bug fixed, but the digest authenticate was missed in 5.4 now, I will file a 
bug about that.
 [2011-09-21 15:59 UTC] laruence@php.net
Automatic comment from SVN on behalf of laruence
Revision: http://svn.php.net/viewvc/?view=revision&amp;revision=317111
Log: Fixed bug #55755 (SegFault when outputting header WWW-Authenticate)
 [2011-09-22 02:25 UTC] laruence@php.net
Automatic comment from SVN on behalf of laruence
Revision: http://svn.php.net/viewvc/?view=revision&amp;revision=317134
Log: Add tests for bug #55755
 [2011-09-23 03:25 UTC] laruence@php.net
the digest bug is fixed, see #55758
 [2012-04-18 09:48 UTC] laruence@php.net
Automatic comment on behalf of laruence
Revision: http://git.php.net/?p=php-src.git;a=commit;h=75f721f4a0c13c333b803e3ff1d7a25f0ed0d3cf
Log: Fixed bug #55755 (SegFault when outputting header WWW-Authenticate)
 [2012-07-24 23:39 UTC] rasmus@php.net
Automatic comment on behalf of laruence
Revision: http://git.php.net/?p=php-src.git;a=commit;h=75f721f4a0c13c333b803e3ff1d7a25f0ed0d3cf
Log: Fixed bug #55755 (SegFault when outputting header WWW-Authenticate)
 [2013-11-17 09:36 UTC] laruence@php.net
Automatic comment on behalf of laruence
Revision: http://git.php.net/?p=php-src.git;a=commit;h=75f721f4a0c13c333b803e3ff1d7a25f0ed0d3cf
Log: Fixed bug #55755 (SegFault when outputting header WWW-Authenticate)
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 27 15:00:01 2026 UTC