Fixed bug #55755 (SegFault when outputting header WWW-Authenticate)